Fix z-index for group teaser pop-over
The group teaser didn't have a z-index which caused it to be displayed
behind the secondary navigation bar. Giving it a z-index solves this
problem.

The chosen z-index is not related to anything else in Open Social so if
more issues are encountered putting this at a higher number is the way
to go. It should go above most page elements except a menu since those
shouldn't be open at the same time anyway as they both hide when
clicking on other elements on the page.

--- a/modules/custom/group_core_comments/assets/css/group_core_comments.scss
+++ b/modules/custom/group_core_comments/assets/css/group_core_comments.scss
@@ -76,6 +76,7 @@
     width: 375px;
     top: 0;
     left: 50%;
+    z-index: 20;
     text-align: left;
     transform: translateX(-50%);
 
